@@ -1,3 +1,8 @@
+Wed Dec 30 08:43:59 2015  Yuki Kurihara  <co000ri@gmail.com>
+
+	* test/stringio/test_stringio.rb (test_initialize): add test for
+	  StringIO#initialize.  [ruby-core:72585] [Feature #11920]
+
 Wed Dec 30 05:19:24 2015  Eric Wong  <e@80x24.org>
 
 	* class.c (struct clone_const_arg): adjust for id_table
